--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
       <p>QR data (text or URL)</p>
       <input type="text" placeholder="QR codes" id="input"  /> <br />
-      <img src="" id="qr-img" alt="Image">
+      <img src="assets/qr.gif" id="qr-img" alt="Image">
       <button id="button">Start generating QR codes</button>
     </div>
 
