--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Qr generator with NS Abdullah</title>
+    <title>NS Abdullah</title>
     <link rel="stylesheet" href="assets/style.css" />
   </head>
   <body>
     <div class="container">
       <p>QR data (text or URL)</p>
       <input type="text" placeholder="QR codes" id="input"  /> <br />
+      <h1 id="h">Abdullah Al Maruf</h1>
       <img src="assets/qr.gif" id="qr-img" alt="Image">
       <button id="button">Start generating QR codes</button>
     </div>
