--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <input type="text" placeholder="QR codes" id="input"  /> <br />
       <h1 id="h">Abdullah Al Maruf</h1>
       <img src="assets/qr.gif" id="qr-img" alt="Image">
+      <p><img src="assets/this.gif" alt="" srcset=""> It is your QR</p>
       <button id="button">Start generating QR codes</button>
     </div>
 
