--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
   <body>
     <div class="container">
       <p>QR data (text or URL)</p>
-      <input type="text" placeholder="QR codes" id="input"  /> <br />
+      <input type="text" placeholder="QR codes" id="input" /> <br />
       <h1 id="h">Abdullah Al Maruf</h1>
-      <img src="assets/qr.gif" id="qr-img" alt="Image">
-      <p><img src="assets/this.gif" alt="" srcset=""> It is your QR</p>
+      <img src="assets/qr.gif" id="qr-img" alt="Image" />
+      <p><img src="assets/this.gif" alt="" srcset="" /> It is your QR</p>
       <button id="button">Start generating QR codes</button>
     </div>
-
     <script src="assets/app.js"></script>
   </body>
 </html>
